objects/Test_Result__c.object
<CustomObject>
    <fields>
        <fullName>Also_Included_in_Ids__c</fullName>
        <label>Also Included in Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currency_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currency Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Developer_Notes__c</fullName>
        <label>Developer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DATA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <formula>OR(ISPICKVAL(Test_Result_Status__c,'Failed'),ISPICKVAL(Test_Status__c,'Failed'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failure_Criticality__c</fullName>
        <inlineHelpText>Must Have - this Scenario is critical for Go-Live
Negotiable - this Scenario is recommended for Go-Live
Nice to Have - this Scenario is not critical for Go-Live</inlineHelpText>
        <label>Failure Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must Have</fullName>
                </value>
                <value>
                    <fullName>Negotiable</fullName>
                </value>
                <value>
                    <fullName>Nice to Have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <inlineHelpText>Code - Bad coding
Configuration - Configured incorrectly
Product - Product malfunction
User Error - Insufficient training</inlineHelpText>
        <label>Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect - Code</fullName>
                </value>
                <value>
                    <fullName>Defect - Configuration</fullName>
                </value>
                <value>
                    <fullName>Defect - Product</fullName>
                </value>
                <value>
                    <fullName>User Error/Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Feedback__c</fullName>
        <description>General Feedback</description>
        <inlineHelpText>General Feedback</inlineHelpText>
        <label>General Feedback</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Retest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Retest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <description>Add a screenshot for FAILED tests</description>
        <inlineHelpText>Add a screenshot for FAILED tests</inlineHelpText>
        <label>Screenshot</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <inlineHelpText>Steps that were taken when the test failed</inlineHelpText>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Cycle__c</fullName>
        <inlineHelpText>When did this test occur? Will be set by default.</inlineHelpText>
        <label>Test Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working Models</fullName>
                </value>
                <value>
                    <fullName>Pre-Validation</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Pre-Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Pre-Integrated Testing</fullName>
                </value>
                <value>
                    <fullName>Integrated Testing</fullName>
                </value>
                <value>
                    <fullName>Pre-End to End Testing</fullName>
                </value>
                <value>
                    <fullName>End to End Testing</fullName>
                </value>
                <value>
                    <fullName>Pre-Go-Live</fullName>
                </value>
                <value>
                    <fullName>Go-Live</fullName>
                </value>
                <value>
                    <fullName>Post Go-Live</fullName>
                </value>
                <value>
                    <fullName>UAT 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Record_URL__c</fullName>
        <inlineHelpText>Copy the URL of the Test Record here that resulted in the Failed or Passed with Exception</inlineHelpText>
        <label>Test Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_Result_Status__c</fullName>
        <label>Test Result Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Passed, with exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Scenario_Status__c</fullName>
        <formula>TEXT(Test_Scenario__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Scenario Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <inlineHelpText>Did this test pass?</inlineHelpText>
        <label>Test Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>products__c</fullName>
        <label>Product(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Result</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Test_Scenario__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_Result_Status__c</columns>
        <columns>Test_Scenario_Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Simplus_Test_Results</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Test_Result_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolution_Owner__c</columns>
        <columns>Urgency__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Scenario_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/15/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Test_Result_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>c</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Simplus_View</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Failed__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Test_Scenario_Status__c</columns>
        <columns>Ready_for_Retest__c</columns>
        <columns>Resolution_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Urgency__c</columns>
        <columns>Pricing__c</columns>
        <columns>Pending_Feedback__c</columns>
        <columns>products__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Developer_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Failed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/16/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Test_Scenario_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Simplus View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Results_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Test_Status__c</columns>
        <columns>Test_Result_Status__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Failure_Reason__c</columns>
        <columns>Comments__c</columns>
        <columns>Resolution_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Urgency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Test_Result_Status__c</field>
            <operation>notEqual</operation>
            <value>Failed</value>
        </filters>
        <label>Test Results Created Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Results_Created_TodayFailures</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Test_Status__c</columns>
        <columns>Test_Result_Status__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Failure_Reason__c</columns>
        <columns>Comments__c</columns>
        <columns>Resolution_Owner__c</columns>
        <columns>Urgency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Test_Result_Status__c</field>
            <operation>equals</operation>
            <value>Failed,"Passed, with exception"</value>
        </filters>
        <label>Test Results Created Today - Failures</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WIP</fullName>
        <columns>NAME</columns>
        <columns>Resolution_Owner__c</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Urgency__c</columns>
        <columns>Test_Scenario_Status__c</columns>
        <columns>Pricing__c</columns>
        <columns>Pending_Feedback__c</columns>
        <columns>Ready_for_Retest__c</columns>
        <columns>products__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Developer_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Failed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/16/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Test_Scenario_Status__c</field>
            <operation>equals</operation>
            <value>WIP</value>
        </filters>
        <label>WIP</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Comments_Required_if_Blocked</fullName>
        <active>true</active>
        <description>Comments are required if test result is marked as "Blocked"</description>
        <errorConditionFormula>AND(
ISPICKVAL( Test_Result_Status__c , "Blocked"),
Comments__c = "")</errorConditionFormula>
        <errorMessage>Comments required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Failure_Criticality_required_for_fails</fullName>
        <active>false</active>
        <description>Failure Criticality required for failed Test Results</description>
        <errorConditionFormula>OR(TEXT( Test_Result_Status__c ) = "Failed",TEXT( Test_Result_Status__c ) = "Passed, with Exception") &amp;&amp; ISBLANK(TEXT( Failure_Criticality__c ))</errorConditionFormula>
        <errorMessage>You must state failure criticality for failed test results</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Failure_Reason_required_for_fails</fullName>
        <active>true</active>
        <description>Failure Reason is required for failed test results</description>
        <errorConditionFormula>TEXT( Test_Result_Status__c ) != "Passed" &amp;&amp; ISBLANK(TEXT( Failure_Reason__c ))</errorConditionFormula>
        <errorMessage>A failure reason is required for failed test results</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Steps_to_reproduce_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISBLANK(Test_Record_URL__c),
ISBLANK(Steps_to_Reproduce__c )),
OR(
ISPICKVAL(Test_Result_Status__c , "Failed"),
ISPICKVAL(Test_Result_Status__c , "Passed, with Exception")
))</errorConditionFormula>
        <errorMessage>Steps to Reproduce and URL for the Test Record that Failed or Passed with Exception is required</errorMessage>
    </validationRules>
</CustomObject>